fixed overflow issue on error page. button margins now more even on mobile

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -74,16 +74,6 @@ a:hover {
     text-decoration: underline;
 }
 
-.btn {
-    background: var(--btn-pad-color);
-    color: var(--btn-font-color);
-    padding: 15px 40px;
-    text-align: center;
-    box-shadow: var(--card-box-shadow);
-    border: none;
-    border-radius: 5px;
-}
-
 input {
     display: block;
 }
@@ -97,10 +87,25 @@ pre {
     white-space: pre-wrap;
     border-left: 1px solid black;
     padding-left: 1rem;
+    overflow: scroll;
+}
+
+.btn {
+    background: var(--btn-pad-color);
+    color: var(--btn-font-color);
+    padding: 15px 40px;
+    text-align: center;
+    box-shadow: var(--card-box-shadow);
+    border: none;
+    border-radius: 5px;
 }
 
 .buttons .btn {
     margin: 10% 5% 0;
+}
+
+.buttons .btn:last-child {
+    margin: 0 5% 0;
 }
 
 .btn.cancel {
@@ -119,8 +124,7 @@ pre {
     }
     .buttons .btn {
         margin: 0 0 0 5%;
-    }
-    
+    } 
 }
 
 @media screen and (min-width: 800px) {
